syntax = "proto3";
package manager.v1;
option go_package = "github.com/WALL-EEEEEEE/proxy-service/manager/gen/manager/v1";

message ResponseStatus {
  int32 code = 1;
  string result = 2;
  string message = 3;
}